<resources>
    <string name="app_name">tema4Ejercicio2</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title">FoodBar</string>
    <string name="nav_header_subtitle">Tu comida donde quieras</string>
    <string name="nav_header_desc">Cabecera del navegador</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_food">Comidas</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_exit">Cerrar sesión</string>
    <string name="menu_providers">Restaurantes</string>
</resources>