<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_food_bank_24px"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_providers"
            android:icon="@drawable/ic_storefront_24px"
            android:title="@string/menu_providers" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_support_24px"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/button_exit"
            android:icon="@drawable/ic_exit_to_app_24px"
            android:title="@string/menu_exit" />
    </group>
</menu>