<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gparagon.tema4ejercicio2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.gparagon.tema4ejercicio2.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_providers"
        android:name="com.gparagon.tema4ejercicio2.ui.providers.ProvidersFragment"
        android:label="@string/menu_providers"
        tools:layout="@layout/fragment_providers" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.gparagon.tema4ejercicio2.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>